Fix home image too large on mobile

--- a/src/app/core/components/home/home.component.less
+++ b/src/app/core/components/home/home.component.less
@@ -7,6 +7,6 @@
   img {
     border-radius: 10px;
     z-index: 150;
-    height: 70% !important;
+    max-width: 95%;
   }
 }
